# my_langchain_pa

./: .env.local.example  README.md  makefile  rundev.sh
backend/: pyproject-back.toml  pyproject.toml  requirements.txt
backend/api/: __init__.py  conversation_chain.py  retrieval_qa_w_sources.py
backend/api/chains/: conversation.py
backend/helper/: __init__.py  config.py  logger.py
backend/langchain_fastapi/websockets/: llm.py
backend/template/: index.html
dj-api/: pyproject.toml
dj-api/api/: urls.py  views.py
dj-api/api/config/: env.py  system_messages.py
dj-api/api/helper/: logger.py
dj-api/config/: constant.py  settings.py  urls.py
frontend/: .gitignore  next.config.js  package.json
frontend/src/lib/api/: useChat.ts
frontend/src/lib/types/: interface.d.ts
frontend/src/pages/: _document.tsx  index.tsx
frontend/src/scss/: globals.scss
frontend/src/scss/components/: Header.module.scss
frontend/styles/: Home.module.css  globals.css
next-app/: .env.example  .gitignore  next.config.js  package.json  tsconfig.json
next-app/src/lib/api/: chat.ts
next-app/src/lib/types/: interface.d.ts
next-app/src/pages/: _app.tsx  _document.tsx  index.tsx
next-app/styles/: Home.module.css  globals.css
